--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
     
     <header>
         <div class="container">
-            <nav>
+            <nav class="planos">
                 <ul class="nav-links oswald-uniquifier">
-                    <a href="index.html"><img class="fieltorcedor" src="logo-fiel-torcedor.png"></a>
+                    <a href="index.html"><img class="fieltorcedor" src="https://www.fieltorcedor.com.br/static/fieltorcedor/img/logo-fiel-torcedor.png"></a>
                     <li class="aba-nav"><a href="lapazmenu.html">PLANOS</a></li>
                     <li class="aba-nav"><a href="lapaznba.html">INGRESSOS</a></li>
                     <li class="aba-nav"><a href="lapaznfl.html">AJUDA</a></li>
                     <li class="aba-nav"><a href="lapazufc.html">CONHEÇA</a></li>
                 </ul>
             </nav>
-        </div>
-        <div class="container">
-            <nav>
+            <nav class="login-cadastre">
                 <ul class="nav-links oswald-uniquifier">
+                    <img class="fieltorcedor" src="us">
                     <li class="aba-nav"><a href="lapaznba.html">LOGIN</a></li>
                     <li class="aba-nav"><a href="lapaznba.html">CADASTRE-SE</a></li>
                 </ul>
@@ -34,7 +33,7 @@
     </header>
 
     <div class="banner01">
-        <center><a href="https://www.corinthians.com.br/app"><img src="banner_sccp_01.jpg"></a></center>
+        <center><a href="https://www.corinthians.com.br/app"><img src="https://www.fieltorcedor.com.br/static/fieltorcedor/img/banner_sccp_01.jpg"></a></center>
     </div>
     
 </body>
