--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
         </div>
     </header>
 
+    <div>
+        <center><h1 class="londrina-sketch-regular">SAUDAÇÕES ALVINEGRAS!<br>AQUI VOCÊ COMPRA INGRESSOS<br>E PLANOS DO FIEL TORCEDOR.<br>APROVEITE!</h1></center>
+    </div>
+
+    <div class="amarelo">
+        <footer class="amarelo-footer">
+            <center><p class="amarelo-p">Agora, o cadastro do Fiel Torcedor e Ingressos Corinthians são unificados e o acesso ocorre no mesmo site!<br> Você pode acessar o site Fiel Torcedor com o login e senha do Fiel Torcedor ou o e-mail e senha do Ingressos Corinthians.</p></center>
+        </footer>
+    </div>
+
     <div class="banner01">
         <center><a href="https://www.corinthians.com.br/app"><img src="https://www.fieltorcedor.com.br/static/fieltorcedor/img/banner_sccp_01.jpg"></a></center>
     </div>
